@- Fixed a bug with /e modifier in preg_replace(), that would not correctly @  replace two-digit references if single digit references were present @  before them. This fixed bug #10218. (Andrei)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@45322 c90b9560-bf6c-de11-be94-00142212c4b1